--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cordova-ios": "^5.1.1",
     "cordova-plugin-cleartext": "1.0.0",
     "cordova-plugin-splashscreen": "5.0.3",
-    "cordova-plugin-statusbar": "^2.4.3"
+    "cordova-plugin-statusbar": "^2.4.3",
+    "phonegap-plugin-barcodescanner": "8.1.0"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -27,7 +28,10 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-cleartext": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android",
